<resources>
    <string name="app_name">SharedList</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="creation_user">Creation user</string>
    <string name="creation_date">Creation date</string>
    <string name="due_date">Due date</string>
    <string name="save">Save</string>
    <string name="task_info">Task information</string>
    <string name="tasks_list">Tasks list</string>
    <string name="add_task">task</string>
    <string name="refresh_tasks">Refresh Tasks</string>
    <string name="status">status</string>
    <string name="completionuser">completionUser</string>
    <string name="completed_by">Completed By:</string>
    <string name="created_by">Created by:</string>
    <string name="creationUser">creationUser</string>
    <string name="dueDate">Due date</string>
    <string name="log_out">Log out</string>
</resources>